# rustimizer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  release-plz.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yaml  publish-unreleased.yaml  release.yaml
src/: lib.rs  main.rs  problem.rs  solver.rs  variable.rs  variables.rs  vector.rs
src/solver/: mod.rs  problem.rs  problemdefinition.rs  solvableproblem.rs  vector.rs
src/variables/: mod.rs  name.rs  scaling.rs  traits.rs  values.rs  variableautoscale.rs  variableinvertedautoscale.rs
tests/: integration_test.rs
