[package]
name = "rustimizer"
version = "0.0.3"
edition = "2024"
authors = ["Nicholas Fiorentini"]
description = "PoC for decision making in Rust. Disclaimer: The project's name was chosen with the help of an LLM. "
repository = "https://github.com/lordgordon/rustimizer"
license = "MIT"

[lib]
name = "rustimizer"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[profile.release]
strip = "debuginfo"         # strip either symbols or debuginfo from a binary.
codegen-units = 1
lto = false

[dependencies]
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
thiserror = "2.0.12"

[dev-dependencies]
approx = "0.5.1"
ndarray = { version = "0.16.1", features = ["approx"] }
